--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,21 @@
         </div>
       </nav>
 <div class="container">
+  {%  with messages = get_flashed_messages() %}
+  {% if messages %}
+
+  {% for message in messages %}
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>Ваша запись!</strong> успешно добавленна.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  
+  {% endfor %}
+
+  {% endif %}
+  {% endwith %}
     <table class="table table-hover">
         <thead>
           <tr>
