--- a/templates/complete.html
+++ b/templates/complete.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="/add">добавить</a>
 <body>
     {% for user in user_date %}
     <h1> {{ user.username }} </h1>
     <h1> {{ user.email }} </h1>
     <h3>{{ user.mess }}</h3>
+    <hr>
 {% endfor %}
 </body>
 </html>
